# hlang

./: CHANGELOG.md  HLang.hs  LICENSE  Lexer.hs  Parser.hs  README.md  example.hlang  hlang.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
examples/: 1.hlang  10.hlang  11.hlang  12.hlang  2.hlang  3.hlang  4.hlang  5.hlang  6.hlang  7.hlang  8.hlang  9.hlang  factorial.hlang
src/: Grammar.hs  HLang.hs  HLangGrammar.hs  HLangInterpreter.hs  HLangLexer.hs  HLangParser.hs  Lexer.hs  Parser.hs
test/: Main.hs
