cabal-version:      2.4
name:               hlang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Alexandru Jercan
maintainer:         jercan_alex27@yahoo.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  HLang

    -- Modules included in this library but not exported.
    other-modules: Parser, HLangLexer, HLangParser, HLangInterpreter

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.12.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hlang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.12.0.0,
        hlang

    hs-source-dirs:   app
    default-language: Haskell2010
