cabal-version:      2.4
name:               hlang
version:            0.1.0.0
synopsis:           Compiler and interpreter for the HLang programing language.
description:        Compiler and interpreter library using monadic parser combinators for the HLang programing language.
homepage:           https://github.com/alexjercan/hlang
bug-reports:        https://github.com/alexjercan/hlang/issues
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             Alexandru Jercan
maintainer:         jercan_alex27@yahoo.com
category:           Compiler
tested-with:        GHC == 8.6.5
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://github.com/alexjercan/hlang.git

library
    exposed-modules:  HLang, HLangGrammar
    other-modules: Parser, HLangLexer, HLangParser, HLangInterpreter

    build-depends:    base ^>=4.12.0.0

    hs-source-dirs:   src
    default-language: Haskell2010

executable hlang
    main-is:          Main.hs

    build-depends:
        base ^>=4.12.0.0,
        hlang

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite unit-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs

    build-depends:
        base ^>=4.12.0.0,
        HUnit ^>= 1.6.2.0,
        hlang

    hs-source-dirs:   test
    default-language: Haskell2010
